@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
 
+2012-11-13 Matt
+	* Photons now saved by default (only tight ones, so size should not increase by much).
+	* Updated method in selectSignalPhotons(), but not uncommented. Need update to MultiLep package, wait for Steve
+	
 2012-11-12 Steve
 	* Adding methods to SusyD3PDAna for d3pd based analysis
 		* getLepSF, getBTagSF (not done) 
